# test_task_finteh

./: .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  pyproject.toml
.github/workflows/: check_pr.yaml
db/: init.sql
docs/db/: db.puml
docs/logic/: logic.puml
nginx/etc/nginx/: nginx.conf
nginx/etc/nginx/conf.d/: default.conf.tmp
src/test_task_fintech/app/: apps.py
src/test_task_fintech/app/models/: __init__.py  discount.py  item.py  item_order.py  order.py  tax.py
src/test_task_fintech/app/models/mixins/: __init__.py  datetime.py  description.py  float.py  id.py  name.py
src/test_task_fintech/config/: settings.py
src/test_task_fintech/config/components/: allowed_hosts.py  auth_password_validators.py  core.py  database.py  installed_apps.py  static.py  time.py
src/test_task_fintech/config/components/settings/: __init__.py  app.py  cache.py  db.py  docker.py
